[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/TileSet/0x72_DungeonTilesetII_v1.3.png" type="Texture" id=1]
[ext_resource path="res://src/PlayerWeapons/Bullet/Script/BulletScript.gd" type="Script" id=2]
[ext_resource path="res://src/PlayerWeapons/WeaponsEffect/LineTrail.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/TileSet/full spritesheet.png" type="Texture" id=4]

[sub_resource type="CanvasItemMaterial" id=6]
light_mode = 1

[sub_resource type="CanvasItemMaterial" id=7]
light_mode = 1

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.481633, 1 )
colors = PoolColorArray( 1, 0.796078, 0.243137, 1, 1, 0.556863, 0.180392, 1, 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 1 ), 0.0, -1.0, 0, 1, Vector2( 1, 0 ), -2.61253, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=8]
resource_local_to_scene = true
flag_disable_z = true
direction = Vector3( -1, 0, 0 )
gravity = Vector3( 0, 0, 0 )
initial_velocity = 10.0
initial_velocity_random = 1.0
angular_velocity = 20.0
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 45.0
angle_random = 0.5
scale = 6.0
scale_random = 1.0
scale_curve = SubResource( 5 )
color_ramp = SubResource( 3 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 1.10457, 2.69875 )

[sub_resource type="Animation" id=10]
tracks/0/type = "value"
tracks/0/path = NodePath("ExplosionEffect/ExplosionSprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 96, 32, 16, 16 ), Rect2( 112, 32, 16, 16 ), Rect2( 128, 32, 16, 16 ), Rect2( 144, 32, 16, 16 ), Rect2( 240, 32, 16, 16 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ExplosionEffect/ExplosionSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 2.79397e-07 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("GlowNode/BulletSprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 2.79397e-07 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("GlowNode/BulletParticles:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 2.79397e-07 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.983029 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("BulletTrail/BulletTrail:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("HitBox/CollisionShape2D:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="Bullet" type="Node2D"]
script = ExtResource( 2 )
BULLET_SPEED = 200.0

[node name="GlowNode" type="Node2D" parent="."]
modulate = Color( 2, 1, 1, 1 )

[node name="BulletSprite" type="Sprite" parent="GlowNode"]
material = SubResource( 6 )
rotation = 1.5708
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 314, 273, 4, 7 )

[node name="BulletParticles" type="Particles2D" parent="GlowNode"]
material = SubResource( 7 )
lifetime = 0.75
local_coords = false
process_material = SubResource( 8 )

[node name="ExplosionEffect" type="Node2D" parent="."]

[node name="ExplosionSprite" type="Sprite" parent="ExplosionEffect"]
visible = false
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 96, 32, 16, 16 )

[node name="BulletTrail" parent="." instance=ExtResource( 3 )]
show_behind_parent = true

[node name="HitBox" type="Area2D" parent="." groups=[
"Projectile",
]]
visible = false
collision_layer = 32
collision_mask = 17

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
self_modulate = Color( 1, 0, 0, 1 )
position = Vector2( 0.385829, 0 )
rotation = 1.5708
shape = SubResource( 9 )

[node name="BulletVisibilityNotifer" type="VisibilityNotifier2D" parent="."]
visible = false
rect = Rect2( -160, -10, 180, 20 )

[node name="BulletAnimation" type="AnimationPlayer" parent="."]
anims/Destroyed = SubResource( 10 )
[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]
[connection signal="screen_exited" from="BulletVisibilityNotifer" to="." method="_on_BulletVisibilityNotifer_screen_exited"]

[editable path="BulletTrail"]
